[gd_scene load_steps=15 format=2]

[ext_resource path="res://Dice/PlayerDiceCollection.gd" type="Script" id=1]
[ext_resource path="res://fonts/pixel-craft-font/PixelCraft-2Odxo.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Battle/Player2.gd" type="Script" id=3]
[ext_resource path="res://Combat.gd" type="Script" id=4]
[ext_resource path="res://Dice/PlayerDiceCollection.tscn" type="PackedScene" id=5]
[ext_resource path="res://Battle/Enemy.gd" type="Script" id=6]
[ext_resource path="res://art/DALLÂ·E 2022-07-15 11.09.34 - dwarven cave fortress interior, pixel art.png" type="Texture" id=7]
[ext_resource path="res://Dice/UnfoldInterface.tscn" type="PackedScene" id=8]
[ext_resource path="res://FaceTooltip.tscn" type="PackedScene" id=9]
[ext_resource path="res://Battle/Encounter.gd" type="Script" id=10]
[ext_resource path="res://Dice/Die.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Encounter" type="Node"]
script = ExtResource( 10 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 424, 816 )
mouse_filter = 2
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="PlayerDiceCollection" parent="." instance=ExtResource( 5 )]
position = Vector2( 322, 894 )
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Die" parent="." instance=ExtResource( 12 )]
position = Vector2( 382, 954 )
scale = Vector2( 2, 2 )

[node name="Die2" parent="." instance=ExtResource( 12 )]
position = Vector2( 509, 955 )
scale = Vector2( 2, 2 )

[node name="Die3" parent="." instance=ExtResource( 12 )]
position = Vector2( 637, 954 )
scale = Vector2( 2, 2 )

[node name="Die4" parent="." instance=ExtResource( 12 )]
position = Vector2( 766, 954 )
scale = Vector2( 2, 2 )

[node name="Die5" parent="." instance=ExtResource( 12 )]
position = Vector2( 894, 954 )
scale = Vector2( 2, 2 )

[node name="UnfoldInterface" parent="." instance=ExtResource( 8 )]
position = Vector2( 6, 662 )

[node name="Combat" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Player" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Enemy" type="Node" parent="."]
script = ExtResource( 6 )

[node name="RollButton" type="Button" parent="."]
margin_left = 289.0
margin_top = 675.0
margin_right = 448.0
margin_bottom = 802.0
custom_fonts/font = SubResource( 1 )
text = "Roll!"

[node name="MessageBox" type="Label" parent="."]
margin_left = 269.0
margin_top = 191.0
margin_right = 781.0
margin_bottom = 292.0
custom_fonts/font = SubResource( 2 )
align = 1
autowrap = true

[node name="ReturnHomeButton" type="Button" parent="."]
visible = false
margin_left = 416.0
margin_top = 336.0
margin_right = 600.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 3 )
text = "Return Home"

[node name="ReturnLevelSelectButton" type="Button" parent="."]
visible = false
margin_left = 416.0
margin_top = 336.0
margin_right = 600.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 3 )
text = "Next Level!"

[node name="FaceTooltip" parent="." instance=ExtResource( 9 )]
margin_left = 6.0
margin_top = 554.0
margin_right = -1018.0
margin_bottom = -470.0

[connection signal="pressed" from="RollButton" to="." method="_on_RollButton_pressed"]
[connection signal="pressed" from="ReturnHomeButton" to="." method="_on_ReturnHomeButton_pressed"]
[connection signal="pressed" from="ReturnLevelSelectButton" to="." method="_on_ReturnLevelSelectButton_pressed"]
