[gd_scene load_steps=15 format=2]

[ext_resource path="res://art/DALLÂ·E 2022-07-15 11.09.34 - dwarven cave fortress interior, pixel art.png" type="Texture" id=1]
[ext_resource path="res://art/dices.png" type="Texture" id=2]
[ext_resource path="res://Combat.gd" type="Script" id=3]
[ext_resource path="res://Player.gd" type="Script" id=4]
[ext_resource path="res://Enemy.gd" type="Script" id=5]
[ext_resource path="res://Encounter.gd" type="Script" id=6]
[ext_resource path="res://EnemyIntent.gd" type="Script" id=7]
[ext_resource path="res://Dice/Die.tscn" type="PackedScene" id=8]
[ext_resource path="res://fonts/pixel-craft-font/PixelCraft-2Odxo.otf" type="DynamicFontData" id=9]
[ext_resource path="res://art/shield.png" type="Texture" id=10]
[ext_resource path="res://Dice/Dice.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 9 )

[node name="Encounter" type="Node"]
script = ExtResource( 6 )

[node name="Combat" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Player" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Enemy" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 424, 816 )
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Dice" parent="." instance=ExtResource( 11 )]
margin_left = 840.0
margin_top = 354.0
margin_right = -94.0
margin_bottom = -580.0

[node name="RollButton" type="Button" parent="."]
margin_left = 168.0
margin_top = 680.0
margin_right = 323.0
margin_bottom = 764.0
custom_fonts/font = SubResource( 1 )
text = "Roll!"

[node name="DiceSlot0" type="Sprite" parent="." groups=["DiceSlots"]]
position = Vector2( 136, 608 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="DiceSlot1" type="Sprite" parent="." groups=["DiceSlots"]]
position = Vector2( 248, 608 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="DiceSlot2" type="Sprite" parent="." groups=["DiceSlots"]]
position = Vector2( 360, 608 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="DiceSprite4" type="Sprite" parent="."]
position = Vector2( 824, 608 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="DiceSprite5" type="Sprite" parent="."]
position = Vector2( 395, 852 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="DiceSprite6" type="Sprite" parent="."]
position = Vector2( 515, 852 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="DiceSprite7" type="Sprite" parent="."]
position = Vector2( 635, 852 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="DiceSprite8" type="Sprite" parent="."]
position = Vector2( 752, 848 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="DiceSprite9" type="Sprite" parent="."]
position = Vector2( 275, 852 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="DiceSprite10" type="Sprite" parent="."]
position = Vector2( 395, 964 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="DiceSprite11" type="Sprite" parent="."]
position = Vector2( 515, 964 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="DiceSprite12" type="Sprite" parent="."]
position = Vector2( 635, 964 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="DiceSprite13" type="Sprite" parent="."]
position = Vector2( 752, 960 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="DiceSprite14" type="Sprite" parent="."]
position = Vector2( 275, 964 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="PlayerHealthText" type="Label" parent="."]
margin_left = 128.0
margin_top = 80.0
margin_right = 267.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 2 )
text = "Health
"

[node name="PlayerHealth" type="Label" parent="."]
margin_left = 120.0
margin_top = 136.0
margin_right = 259.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 2 )
text = "40
"
align = 1

[node name="PlayerEnergy" type="Label" parent="."]
margin_left = 16.0
margin_top = 856.0
margin_right = 155.0
margin_bottom = 957.0
custom_fonts/font = SubResource( 2 )
text = "3"
align = 1

[node name="EnemyHealthText" type="Label" parent="."]
margin_left = 696.0
margin_top = 80.0
margin_right = 995.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 2 )
text = "Enemy Health
"

[node name="EnemyHealth" type="Label" parent="."]
margin_left = 768.0
margin_top = 128.0
margin_right = 907.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 2 )
text = "40
"
align = 1

[node name="EnemyName" type="Label" parent="."]
margin_left = 688.0
margin_top = 680.0
margin_right = 975.0
margin_bottom = 781.0
custom_fonts/font = SubResource( 2 )
text = "Enemy Sprite"

[node name="EnemyIntent" type="TextureRect" parent="."]
margin_left = 792.0
margin_top = 464.0
margin_right = 1369.0
margin_bottom = 1230.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 10 )
script = ExtResource( 7 )

[node name="MessageBox" type="Label" parent="."]
margin_left = 272.0
margin_top = 320.0
margin_right = 784.0
margin_bottom = 421.0
custom_fonts/font = SubResource( 2 )
align = 1
autowrap = true

[node name="ReturnHomeButton" type="Button" parent="."]
margin_left = 416.0
margin_top = 336.0
margin_right = 600.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 3 )
text = "Return Home"

[node name="PlayerEnergyText" type="Label" parent="."]
margin_left = 16.0
margin_top = 808.0
margin_right = 176.0
margin_bottom = 872.0
custom_fonts/font = SubResource( 2 )
text = "Energy"

[node name="Health6" type="Label" parent="."]
margin_left = 8.0
margin_top = 928.0
margin_right = 210.0
margin_bottom = 992.0
custom_fonts/font = SubResource( 2 )
text = "Dice Pool"

[node name="Die" parent="." instance=ExtResource( 8 )]
position = Vector2( 912, 864 )
scale = Vector2( 2, 2 )

[connection signal="pressed" from="RollButton" to="." method="_on_RollButton_pressed"]
